==============
lxml changelog
==============

2.3.2 (Under development)
=========================

Features added
--------------

* ``lxml.objectify`` gained its own ``SubElement()`` function as a
  copy of ``etree.SubElement`` to avoid an otherwise redundant import
  of ``lxml.etree`` on the user side.

Bugs fixed
----------

Other changes
--------------


2.3.1 (2011-09-25)
==================

Features added
--------------

* New option ``kill_tags`` in ``lxml.html.clean`` to remove specific
  tags and their content (i.e. their whole subtree).

* ``pi.get()`` and ``pi.attrib`` on processing instructions to parse
  pseudo-attributes from the text content of processing instructions.

* ``lxml.get_include()`` returns a list of include paths that can be
  used to compile external C code against lxml.etree.  This is
  specifically required for statically linked lxml builds when code
  needs to compile against the exact same header file versions as lxml
  itself.

* ``Resolver.resolve_file()`` takes an additional option
  ``close_file`` that configures if the file(-like) object will be
  closed after reading or not.  By default, the file will be closed,
  as the user is not expected to keep a reference to it.

Bugs fixed
----------

* HTML cleaning didn't remove 'data:' links.

* The html5lib parser integration now uses the 'official'
  implementation in html5lib itself, which makes it work with newer
  releases of the library.

* In ``lxml.sax``, ``endElementNS()`` could incorrectly reject a plain
  tag name when the corresponding start event inferred the same plain
  tag name to be in the default namespace.

* When an open file-like object is passed into ``parse()`` or
  ``iterparse()``, the parser will no longer close it after use.  This
  reverts a change in lxml 2.3 where all files would be closed.  It is
  the users responsibility to properly close the file(-like) object,
  also in error cases.
